Remove unused font files and update blog content
- Deleted obsolete font files: Atkinson Bold, Atkinson Regular, Geist Mono VF, Geist VF, Open Sans Italic, Open Sans Regular, and Open Sans SemiBold to streamline assets.
- Updated the title of the blog post "The AI Gold Rush and the 'Picks and shovels' Strategy" to "Executive Summary" for clarity.
- Added a new blog post titled "Decoding the AI Value Chain" with comprehensive insights on AI investment opportunities.
- Adjusted the title and description of the "Pure-Play AI Investment Landscape" blog post for consistency and clarity.

--- a/src/content/blog/beyond-nvidia/index.mdx
+++ b/src/content/blog/beyond-nvidia/index.mdx
@@ -7,7 +7,7 @@ image: './banner.png'
 authors: ['aurel']
 ---
 
-## The AI Gold Rush and the "Picks and shovels" Strategy
+## Executive Summary
 
 The artificial intelligence revolution has ignited a modern-day gold rush, with
 investors flocking to the most visible beneficiaries. The staggering market
