--- a/src/content/blog/pure-play-ai/index.mdx
+++ b/src/content/blog/pure-play-ai/index.mdx
@@ -1,7 +1,6 @@
 ---
-title: 'The Pure-Play AI Investment Landscape'
-description: 'An Analysis of Market Leaders, Emerging Contenders, and Sentiment
-Dynamics'
+title: 'Pure-Play AI Landscape Overview'
+description: 'An Analysis of Market Leaders, Emerging Contenders, and Sentiment'
 date: 2025-08-10
 tags: ['investing','ai']
 image: './banner.png'
