Fix formatting in blog post on AI value chain by adjusting differentiation section for improved readability.

--- a/src/content/blog/decoding-ai/index.mdx
+++ b/src/content/blog/decoding-ai/index.mdx
@@ -22,9 +22,9 @@ sustainable competitive advantage. The objective is to pinpoint where two
 primary forms of advantage emerge:
 
 **cost leadership**, achieving lower production costs than competitors, and
-***differentiation**, creating unique value that commands a premium price. By
-*applying this lens, investors can distinguish between fleeting revenue growth
-*and durable, long-term profitability.
+**differentiation**, creating unique value that commands a premium price. By
+applying this lens, investors can distinguish between fleeting revenue growth
+and durable, long-term profitability.
 
 To bring clarity to this complex ecosystem, this analysis is structured across a
 four-layer AI value chain. This model illustrates the flow of value from the
