Correct minor grammatical errors in the blog post on the AI value chain for improved clarity and readability.

--- a/src/content/blog/decoding-ai/index.mdx
+++ b/src/content/blog/decoding-ai/index.mdx
@@ -28,7 +28,7 @@ and durable, long-term profitability.
 
 To bring clarity to this complex ecosystem, this analysis is structured across a
 four-layer AI value chain. This model illustrates the flow of value from the
-physical foundation to the end-user, highlighting the critical interdependence
+physical foundation to the end user, highlighting the critical interdependence
 where advancements in one layer unlock new possibilities in the next. The four
 layers are:
 
@@ -155,7 +155,7 @@ A critical and often underappreciated moat for established data center operators
 is interconnection. This refers to the dense, physical web of fiber optic cables
 that directly link thousands of businesses, cloud providers, and network
 carriers within a single data center campus. This creates a powerful network
-effect, often described as "digital gravity". As more essential players—like
+effect, often described as "digital gravity." As more essential players—like
 AWS or Google Cloud—establish a presence in a data center, the value of being in
 that same facility increases exponentially for every other business that needs
 to connect to them with low latency and high security. This ecosystem becomes
@@ -331,7 +331,7 @@ compute capacity, and is increasingly selling directly to enterprise customers,
 a move that puts it in potential competition with Microsoft's own sales
 channels. This evolving dynamic, punctuated by public sparring between tech
 leaders like Elon Musk and Satya Nadella over who holds the upper hand, points
-to a complex state of "co-opetition". For investors, the stability of this
+to a complex state of "co-opetition." For investors, the stability of this
 partnership is a key variable; a significant change or "decoupling" would have
 massive repercussions for both entities and the broader market.
 
@@ -362,7 +362,7 @@ consumption required to train and run them. They are, in essence, selling the
 "picks and shovels" during a gold rush where the miners themselves (the model
 developers) are not yet profitable. This is exemplified by Microsoft's \$13
 billion investment in OpenAI, which is structured largely as Azure cloud
-credits—effectively a massive, pre-paid purchase of its own services. This
+credits—effectively a massive, prepaid purchase of its own services. This
 gives the hyperscalers a dual revenue stream from the AI boom: they sell raw
 compute infrastructure to the model developers, and they sell higher-level,
 integrated AI services (like Amazon Bedrock or Azure OpenAI Service) to
@@ -521,7 +521,7 @@ long-term competitive advantage may shift away from feature checklists and
 toward the overall developer experience. The market is crowded with tools
 offering similar capabilities, and the major cloud providers are rapidly
 achieving feature parity with their native offerings. This suggests that the
-underlying technology is heading towards commoditization. In such a market,
+underlying technology is heading toward commoditization. In such a market,
 differentiation shifts to user-centric factors. The success of a company like
 HashiCorp was built not just on the power of its tools, but on a
 developer-first, bottom-up adoption model driven by an excellent user experience
