Add new SVG assets for various themes and animations
- Introduced multiple SVG files for themes including '404 error', 'Asset selection', 'Data Trends', 'Development focus', 'Directions', 'Fighting against Coronavirus', 'Flight Booking', 'Focus', 'Innovation', 'Late at night', 'Light bulb', 'Movie Night', 'Pay attention', 'People sightseeing outdoors', 'planting tree', 'Questions', 'Scope', 'Social tree', 'Switches', 'Treasure hunt', and 'Universal declaration of human rights'.
- Added animated versions for 'questions' and 'scope' themes to enhance visual engagement.
- Updated blog content to reference the new 'questions-animate' SVG for improved thematic representation.

--- a/src/content/blog/beyond-the-buzz/index.mdx
+++ b/src/content/blog/beyond-the-buzz/index.mdx
@@ -3,9 +3,10 @@ title: 'Beyond the Buzz'
 description: "An Investor's Guide to Spotting AI-Washing"
 date: 2025-08-11
 tags: ['investing','ai']
-image: './banner.png'
+image: '@/assets/storyset/questions-animate.svg'
 authors: ['aurel']
 ---
+
 ## 1. The AI Gold Rush and the Investor's Dilemma
 
 The proliferation of artificial intelligence, particularly since the public
