--- a/src/content/blog/beyond-nvidia/index.mdx
+++ b/src/content/blog/beyond-nvidia/index.mdx
@@ -3,7 +3,7 @@ title: 'Beyond NVIDIA'
 description: 'The Unseen Titans Forging the AI Revolution'
 date: 2025-07-27
 tags: ['investing','ai']
-image: './banner.png'
+// image: './banner.png'
 authors: ['aurel']
 ---
 
