--- a/src/content/blog/beyond-the-buzz/index.mdx
+++ b/src/content/blog/beyond-the-buzz/index.mdx
@@ -3,7 +3,7 @@ title: 'Beyond the Buzz'
 description: "An Investor's Guide to Spotting AI-Washing"
 date: 2025-08-11
 tags: ['investing','ai']
-image: '@/assets/storyset/questions-animate.svg'
+//image: '@/assets/storyset/questions-animate.svg'
 authors: ['aurel']
 ---
 
