--- a/src/content/blog/decoding-ai/index.mdx
+++ b/src/content/blog/decoding-ai/index.mdx
@@ -3,7 +3,7 @@ title: 'Decoding the AI Value Chain'
 description: "An Investor's Guide to Profitability and Moats"
 date: 2025-08-03
 tags: ['investing','ai']
-image: './banner.png'
+// image: './banner.png'
 authors: ['aurel']
 ---
 
