--- a/src/content/blog/pure-play-ai/index.mdx
+++ b/src/content/blog/pure-play-ai/index.mdx
@@ -3,7 +3,7 @@ title: 'Pure-Play AI Landscape Overview'
 description: 'An Analysis of Market Leaders, Emerging Contenders, and Sentiment'
 date: 2025-08-10
 tags: ['investing','ai']
-image: './banner.png'
+// image: './banner.png'
 authors: ['aurel']
 ---
 
