Add new SVG assets for enhanced visual representation
- Introduced new SVG files: api.svg, brain.svg, play.svg, question.svg, and server.svg to enrich the asset library.
- Updated blog content to reference the new SVG assets for improved thematic representation and visual engagement.

--- a/src/content/blog/beyond-the-buzz/index.mdx
+++ b/src/content/blog/beyond-the-buzz/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'Beyond the Buzz'
+title: 'Beyond the AI Buzz'
 description: "An Investor's Guide to Spotting AI-Washing"
 date: 2025-08-11
 tags: ['investing','ai']
-//image: '@/assets/storyset/questions-animate.svg'
+image: '@/assets/storyset/question.svg'
 authors: ['aurel']
 ---
 
-## 1. The AI Gold Rush and the Investor's Dilemma
+## Executive Summary 
 
 The proliferation of artificial intelligence, particularly since the public
 launch of generative AI platforms like ChatGPT in late 2022, has triggered an
@@ -19,14 +19,14 @@ investors to capitalize on what many believe will be the next major
 technological revolution. However, this excitement is shadowed by a significant
 and growing risk: "AI-washing."
 
-### 1.1 Defining the Landscape
-
-AI-washing is the practice of exaggerating, misrepresenting, or fabricating a
+> **AI-washing** is the practice of exaggerating, misrepresenting, or fabricating a
 company's artificial intelligence capabilities to appear more technologically
 advanced and innovative than it truly is. Much like "greenwashing" in the
 environmental, social, and governance (ESG) space, AI-washing exploits market
 hype to gain a competitive advantage, attract capital, and inflate stock
-prices. The pressure on companies to present a compelling "AI story" to
+prices.
+
+The pressure on companies to present a compelling "AI story" to
 investors and consumers is immense. This pressure, combined with the current
 lack of standardized metrics for measuring AI implementation and compliance,
 creates a fertile ground for false promises and misleading statements.
@@ -53,7 +53,7 @@ between superficial claims and genuine, integrated AI. Investors who can adopt
 an analytical, skeptical mindset are best positioned to navigate this shift,
 avoiding the pitfalls of hype and identifying truly valuable opportunities.
 
-### 1.2 The High Cost of Hype: Investor Risks and Market Distortion
+## 1. The High Cost of Hype: Investor Risks and Market Distortion
 
 The consequences of AI-washing extend far beyond deceptive marketing. For
 investors, the most immediate risk is significant financial loss. Investing in a
@@ -126,12 +126,12 @@ quality of corporate communication in real time.
 
 |Red Flag Buzzword|Green Flag Substance (Illustrative Examples)|
 |---|---|
-|**"AI-Powered"**|"Our system uses a Natural Language Processing (NLP) model trained on 10 million customer service transcripts to categorize support tickets, reducing average response time by 30%." 7|
-|**"Leveraging Big Data"**|"We analyze 5 terabytes of anonymized logistical data daily to optimize shipping routes, resulting in a 15% reduction in fuel consumption and delivery times." 10|
-|**"AI-Driven Insights"**|"Our computer vision algorithm, running on Nvidia's Blackwell platform, analyzes production line imagery to detect manufacturing defects with 99.8% accuracy, reducing scrap rates by 7%." 11|
-|**"Proprietary Algorithm"**|"Our novel approach to data compression for AI model training is protected by three U.S. patents (e.g., US Patent #XXXXXXXX), which gives us a significant performance advantage over standard methods." 13|
-|**"Revolutionary Solution"**|"Our AI-driven inventory management system, which integrates real-time sales data and supply chain feeds, led to a 5% reduction in inventory carrying costs and a 10% increase in sales from reduced stockouts in the last fiscal year." 12|
-|**"Strategic Synergy"**|"Our partnership with OpenAI allows us to integrate the latest GPT-4 models directly into our CRM platform via API, enabling our customers to generate sales emails that are 40% more effective based on A/B testing." 11|
+|**"AI-Powered"**|"Our system uses a Natural Language Processing (NLP) model trained on 10 million customer service transcripts to categorize support tickets, reducing average response time by 30%." |
+|**"Leveraging Big Data"**|"We analyze 5 terabytes of anonymized logistical data daily to optimize shipping routes, resulting in a 15% reduction in fuel consumption and delivery times." |
+|**"AI-Driven Insights"**|"Our computer vision algorithm, running on Nvidia's Blackwell platform, analyzes production line imagery to detect manufacturing defects with 99.8% accuracy, reducing scrap rates by 7%." |
+|**"Proprietary Algorithm"**|"Our novel approach to data compression for AI model training is protected by three U.S. patents (e.g., US Patent #XXXXXXXX), which gives us a significant performance advantage over standard methods." |
+|**"Revolutionary Solution"**|"Our AI-driven inventory management system, which integrates real-time sales data and supply chain feeds, led to a 5% reduction in inventory carrying costs and a 10% increase in sales from reduced stockouts in the last fiscal year." |
+|**"Strategic Synergy"**|"Our partnership with OpenAI allows us to integrate the latest GPT-4 models directly into our CRM platform via API, enabling our customers to generate sales emails that are 40% more effective based on A/B testing." |
 
 ### 2.3 The Earnings Call Litmus Test: Where Hype Meets Reality
 
@@ -150,12 +150,12 @@ complexities" to avoid discussing specific failures. Their answers lack depth
 and often deflect from the core question.
 
 - **Leaders** speak with operational specificity. They discuss their AI
-initiatives using concrete product names (**Apple Intelligence, Microsoft
-Copilot**), specific technology platforms (**Nvidia Blackwell, Azure AI**), key
-strategic goals (**Sovereign AI, Private Cloud Compute**), and major
-partnerships (**OpenAI, Foxconn**). They can quantify market impact, referencing
-**billions in revenue from AWS AI services** or **faster adoption rates for new
-AI-enabled iOS versions**. When a CEO can discuss the precise impact of U.S.
+initiatives using concrete product names (Apple Intelligence, Microsoft
+Copilot), specific technology platforms (Nvidia Blackwell, Azure AI), key
+strategic goals (Sovereign AI, Private Cloud Compute), and major
+partnerships (OpenAI, Foxconn). They can quantify market impact, referencing
+billions in revenue from AWS AI services or faster adoption rates for new
+AI-enabled iOS versions. When a CEO can discuss the precise impact of U.S.
 export controls on their next-generation chip supply (as Nvidia does) or detail
 investments in custom AI accelerators like Amazon's Trainium and Microsoft's
 Maia 100, it signals a deep operational reality that a pretender cannot fake.
