--- a/src/content/blog/pure-play-ai/index.mdx
+++ b/src/content/blog/pure-play-ai/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Pure-Play AI Landscape Overview'
+title: 'Pure Play AI Landscape Overview'
 description: 'An Analysis of Market Leaders, Emerging Contenders, and Sentiment'
 date: 2025-08-10
 tags: ['investing','ai']
-// image: './banner.png'
+image: '@/assets/storyset/play.svg'
 authors: ['aurel']
 ---
 
@@ -12,7 +12,7 @@ authors: ['aurel']
 The artificial intelligence sector has transitioned from a nascent technological
 frontier to a primary driver of market activity and investment strategy. While
 diversified technology conglomerates have captured significant attention, a
-distinct and volatile category of "pure-play" AI companies has emerged. These
+distinct and volatile category of "pure play" AI companies has emerged. These
 firms, whose core business is exclusively the development and deployment of AI
 solutions, offer investors direct exposure to the sector's explosive growth
 potential. Unlike their larger, more diversified counterparts, these companies
@@ -20,8 +20,10 @@ are highly responsive to AI-specific trends and technological advancements, but
 are also acutely vulnerable to sector-specific risks, competition, and shifts in
 investor sentiment.
 
+> **Pure Play AI:** A company whose business revolves entirely around artificial intelligence, from software and machine learning platforms to AI hardware. Unlike diversified tech giants, pure play AI firms offer investors concentrated exposure to AI trends, making them easier to evaluate—but also more volatile.
+
 A central theme across this landscape is the tension between extraordinary
-growth and elusive profitability. Many pure-play firms report staggering
+growth and elusive profitability. Many pure play firms report staggering
 year-over-year revenue increases, often in the range of 20% to over 200%, yet
 consistently post losses on a GAAP basis. This dynamic has created a significant
 valuation conundrum. Stocks are frequently traded at high price-to-sales (P/S)
@@ -36,7 +38,7 @@ even while acknowledging technological promise. In contrast, retail investors on
 social media platforms frequently exhibit fervent bullishness, driven by
 powerful narratives of disruption and paradigm shifts.
 
-This report provides an in-depth analysis of key publicly traded, pure-play AI
+This report provides an in-depth analysis of key publicly traded, pure play AI
 companies, categorizing them into distinct strategic tiers. It examines their
 business models, financial health, and the critical divergence between
 professional and retail market sentiment to provide a comprehensive view of the
@@ -45,7 +47,7 @@ opportunities and risks within this dynamic sector.
 ## 1. The Enterprise AI Vanguard: In-Depth Profiles
 
 This profiles the companies that have become bellwethers for the
-pure-play enterprise AI software market. Their performance, strategic decisions,
+pure play enterprise AI software market. Their performance, strategic decisions,
 and the sentiment they attract often serve as a proxy for the health and
 direction of the broader sector.
 
@@ -81,7 +83,7 @@ a 48.2% year-over-year increase that, on an annualized basis, marks its first
 billion-dollar quarter. This performance confirms the accelerating growth
 narrative that has captivated investors. Critically, Palantir has achieved GAAP
 profitability for several consecutive quarters, a key milestone that
-distinguishes it from many of its pure-play peers and lends credibility to its
+distinguishes it from many of its pure play peers and lends credibility to its
 business model. The company reported an adjusted EPS of \$0. for the quarter, a
 78% year-over-year increase. Financially, the company is exceptionally
 well-positioned, holding \$5. billion in cash and short-term investments with no
@@ -122,7 +124,7 @@ premium.
 
 Business Model & Market Position
 
-C3.ai operates as an enterprise AI pure-play, offering a suite of pre-built and
+C3.ai operates as an enterprise AI pure play, offering a suite of pre-built and
 configurable AI applications designed for rapid deployment. The company targets
 a wide range of industries, including utilities, energy, and manufacturing, with
 notable clients such as ConEdison and Shell using its platform for predictive
@@ -147,7 +149,7 @@ the near future and continues to burn cash, a significant risk factor in a
 market that is increasingly scrutinizing financial viability. The stock trades
 at a forward P/S ratio of 6.7x. While this is below its historical median, it
 remains above the broader technology sector average, indicating that investors
-are still willing to pay a premium for its pure-play AI focus.
+are still willing to pay a premium for its pure play AI focus.
 
 Market and Social Media Sentiment
 
@@ -192,7 +194,7 @@ specialized rivals like Automation Anywhere and Blue Prism.
 Financial Health & Performance (Q2 2025)
 
 UiPath is a larger and more financially stable entity compared to many of its
-pure-play peers. For its second fiscal quarter of 2025, the company reported
+pure play peers. For its second fiscal quarter of 2025, the company reported
 revenue of \$316 million, a 10% year-over-year increase. Its Annualized Recurring
 Revenue (ARR), a key metric for subscription businesses, grew at a faster clip
 of 19%, reaching \$1.551 billion. The company is moving toward profitability and
@@ -214,7 +216,7 @@ The bear case is centered on decelerating growth, with ARR guidance for fiscal
 contraction in its customer base, and the immense competitive threat posed by
 Microsoft's bundled offerings.
 
-UiPath represents a "legacy" pure-play AI company now at a strategic crossroads.
+UiPath represents a "legacy" pure play AI company now at a strategic crossroads.
 Its core RPA market is facing commoditization, a classic threat when a platform
 giant like Microsoft enters a niche space and bundles a competing product into
 its broader enterprise ecosystem. The company's slowing growth and declining
@@ -228,7 +230,7 @@ successfully execute this difficult pivot and re-accelerate growth. Its future
 performance hinges on proving it can innovate beyond its original, maturing
 niche.
 
-## 2. The Next Wave of Pure-Play AI Innovators
+## 2. The Next Wave of pure play AI Innovators
 
 This analyzes a group of high-profile, software-focused AI companies
 that have captured significant investor attention. They operate in distinct
@@ -380,7 +382,7 @@ profile compared to more speculative names like Palantir or BigBear.ai.
 Discussions would likely center on its position within the high-growth
 cybersecurity sector and its fierce competition with market leader CrowdStrike.
 
-These three companies represent a diversification of risk within the pure-play
+These three companies represent a diversification of risk within the pure play
 AI theme. While the "Vanguard" group competes more directly for broad enterprise
 data platform budgets, this "Next Wave" offers exposure to distinct secular
 trends. An investment in SoundHound is a bet on the consumer and enterprise
@@ -396,7 +398,7 @@ semi-independent economic verticals.
 ## 3. Leaders in Specialized AI Verticals
 
 This moves beyond general enterprise platforms to examine companies
-applying a pure-play AI model to disrupt specific, high-value industries. Their
+applying a pure play AI model to disrupt specific, high-value industries. Their
 success is tied not just to their AI technology but also to their deep domain
 expertise and ability to navigate industry-specific challenges, such as
 regulation and complex, proprietary data.
@@ -533,7 +535,7 @@ insight into the physical build-out of the AI revolution.
 To contextualize the performance of these diverse companies, the following table
 provides a snapshot of key financial and valuation metrics as of their latest
 reporting period (primarily Q2 2025). This allows for an at-a-glance comparison
-of growth, profitability, and market valuation across the pure-play AI
+of growth, profitability, and market valuation across the pure play AI
 landscape.
 | Company (Ticker) | Market Cap | Business Focus | Q2'25 Revenue | Q2'25 Rev. Growth (YoY) | TTM P/S Ratio | Gross Margin (%) |
 | --- | --- | --- | --- | --- | --- | --- |
@@ -558,7 +560,7 @@ sharply diverge.
 | Company (Ticker) | Analyst Consensus | # of Analysts | Avg. Price Target Upside | Social Media Sentiment (Score) | Key Social Media Narrative |
 | --- | --- | --- | --- | --- | --- |
 | **Palantir (PLTR)** | Hold | 23 | N/A (target below price) | Positive (67/100) | "Future of America" vs. "Insanely Overvalued" |
-| **C3.ai (AI)** | Hold | 24 | ~12% | N/A | High-potential pure-play vs. unprofitable cash burn |
+| **C3.ai (AI)** | Hold | 24 | ~12% | N/A | High-potential pure play vs. unprofitable cash burn |
 | **UiPath (PATH)** | Hold | 26 | ~118% | N/A | Legacy leader vs. slowing growth, Microsoft threat |
 | **SoundHound AI (SOUN)** | Buy | 8 | ~-12% to +24% | Positive (82/100) | Explosive growth, high-risk/high-reward |
 | **BigBear.ai (BBAI)** | Buy | 4 | ~4% | Neutral (59/100) | "Palantir 2.0," speculative, high volatility |
@@ -569,7 +571,7 @@ sharply diverge.
 
 ### 5.3 Investment Thesis and Risk Profiles
 
-The analysis reveals that "pure-play AI" is not a monolithic category. The
+The analysis reveals that "pure play AI" is not a monolithic category. The
 profiled companies can be grouped into distinct investment tiers, each with a
 unique thesis and risk profile.
 
@@ -614,7 +616,7 @@ ecosystem, rather than on the success of any single software application.
 
 ## Conclusion
 
-In conclusion, the pure-play AI sector offers a spectrum of investment
+In conclusion, the pure play AI sector offers a spectrum of investment
 opportunities, from highly speculative growth stories to more stable,
 specialized leaders. A thorough analysis requires investors to look beyond the
 "AI" label and scrutinize the specific business model, financial realities,
