--- a/src/content/blog/decoding-ai/index.mdx
+++ b/src/content/blog/decoding-ai/index.mdx
@@ -3,7 +3,7 @@ title: 'Decoding the AI Value Chain'
 description: "An Investor's Guide to Profitability and Moats"
 date: 2025-08-03
 tags: ['investing','ai']
-image: '@/assets/storyset/404.svg'
+image: '@/assets/storyset/brain.svg'
 authors: ['aurel']
 ---
 
@@ -12,11 +12,11 @@ authors: ['aurel']
 The rapid ascent of Artificial Intelligence (AI) represents a fundamental
 restructuring of the global economy, creating investment opportunities from
 silicon manufacturing to enterprise software. Global spending on AI is
-projected to reach \$500 billion in 2024, signaling a technological
+projected to reach \$600 billion in 2026, signaling a technological
 transformation on par with the industrial revolution. For investors, navigating
 this landscape requires moving beyond the hype to understand where economic
 value is truly being created and captured. This report employs the strategic
-framework of value chain analysis, first introduced by Michael Porter, to
+framework of [value chain analysis](https://www.ibm.com/think/topics/value-chain-analysis), first introduced by Michael Porter in 1985, to
 dissect the AI industry into its core activities and identify the sources of
 sustainable competitive advantage. The objective is to pinpoint where two
 primary forms of advantage emerge:
