Update blog post titles for clarity and consistency
- Revised titles for three blog posts: 'Beyond the AI Buzz' to 'Beyond the Buzz', 'Decoding the AI Value Chain' to 'Decoding the Value Chain', and 'Pure Play AI Landscape Overview' to 'Pure Play AI Landscape' for improved clarity and alignment with content focus.

--- a/src/content/blog/decoding-ai/index.mdx
+++ b/src/content/blog/decoding-ai/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Decoding the AI Value Chain'
+title: 'Decoding the Value Chain'
 description: "An Investor's Guide to Profitability and Moats"
 date: 2025-08-03
 tags: ['investing','ai']
