--- a/src/content/blog/pure-play-ai/index.mdx
+++ b/src/content/blog/pure-play-ai/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Pure Play AI Landscape Overview'
+title: 'Pure Play AI Landscape'
 description: 'An Analysis of Market Leaders, Emerging Contenders, and Sentiment'
 date: 2025-08-10
 tags: ['investing','ai']
