--- a/src/content/blog/beyond-the-buzz/index.mdx
+++ b/src/content/blog/beyond-the-buzz/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Beyond the AI Buzz'
+title: 'Beyond the Buzz'
 description: "An Investor's Guide to Spotting AI-Washing"
 date: 2025-08-11
 tags: ['investing','ai']
