Refactor 'Executive Summary' section in 'Decoding the AI Value Chain' blog post for clarity and flow
- Improved the readability of the Executive Summary by restructuring sentences for better flow and coherence.
- Enhanced the explanation of the value chain analysis framework and its relevance to the AI industry, emphasizing the two primary forms of competitive advantage: cost leadership and differentiation.

--- a/src/content/blog/value-chain/index.mdx
+++ b/src/content/blog/value-chain/index.mdx
@@ -7,21 +7,20 @@ image: '@/assets/storyset/brain.svg'
 authors: ['aurel']
 ---
 
-## Executive Summary 
+## Executive Summary
 
 The rapid ascent of Artificial Intelligence (AI) represents a fundamental
 restructuring of the global economy, creating investment opportunities from
-silicon manufacturing to enterprise software. Global spending on AI is
-projected to reach \$600 billion in 2026, signaling a technological
-transformation on par with the industrial revolution. For investors, navigating
-this landscape requires moving beyond the hype to understand where economic
-value is truly being created and captured. This report employs the strategic
-framework of [value chain analysis](https://www.ibm.com/think/topics/value-chain-analysis), first introduced by Michael Porter in 1985, to
-dissect the AI industry into its core activities and identify the sources of
-sustainable competitive advantage. The objective is to pinpoint where two
-primary forms of advantage emerge:
-
-**cost leadership**, achieving lower production costs than competitors, and
+silicon manufacturing to enterprise software. Global spending on AI is projected
+to reach \$600 billion in 2026, signaling a technological transformation on par
+with the industrial revolution. For investors, navigating this landscape
+requires moving beyond the hype to understand where economic value is truly
+being created and captured. This report employs the strategic framework of
+[value chain analysis](https://www.ibm.com/think/topics/value-chain-analysis),
+first introduced by Michael Porter in 1985, to dissect the AI industry into its
+core activities and identify the sources of sustainable competitive advantage.
+The objective is to pinpoint where two primary forms of advantage emerge: **cost
+leadership**, achieving lower production costs than competitors, and
 **differentiation**, creating unique value that commands a premium price. By
 applying this lens, investors can distinguish between fleeting revenue growth
 and durable, long-term profitability.
